test_files/success/exit_1.s
# simply exit 1

main:                    
    li   $v0, 1 # return 1
    jr   $ra
