test_files/compile_error/instruction_in_data.s
    .data
main:
    li  $v0, 0
    jr  $ra
